Fix blurry issue coverpage on chrome and IE
Issue coverpages are resized by Tournesol to a max width of 135px.
Sometimes the height is greater than our max-height of 200px.
Use a max-width of 135px instead

ref #2402

--- a/eruditorg/static/sass/components/_issue-covers.scss
+++ b/eruditorg/static/sass/components/_issue-covers.scss
@@ -4,5 +4,6 @@
 
 .issue-cover {
   outline: 1px solid $mid-grey;
-  max-height: 200px;
+  max-width: 135px;
+  margin-bottom: 5px;
 }
